--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 
     .main-container {
       display:grid;
-      grid-template-columns: 400px 320px 320px 400px;
-      grid-template-rows:150px 480px 150px;
+      grid-template-columns: 33% 17% 17% 33%;
+      grid-template-rows:15% 70% 15%;
     }
 
     img {
@@ -52,29 +52,30 @@
 
     .heading1 {
       font-family: "Montserrat", sans-serif;
-      letter-spacing: 7px;
-      font-size: 12px;;
+      letter-spacing: 0.4em;
+      font-size: 0.6em;;
       font-weight: 500;
       text-transform: uppercase;
       color: hsl(228, 12%, 48%);
-      margin: 30px 30px 0px 30px;
+      margin: 11% 0% 0% 13%;
 
     }
 
     .heading2 {
       font-family: "Fraunces", serif;
-      font-size: 33px;
+      font-size: 1.6em;
       line-height: 92%;
       font-weight: 700;
-      margin: 25px 60px 30px 30px;
+      margin: 11% 10% 0% 13%;
     }
 
     .main_text {
 
       font-family: "Montserrat", sans-serif;
       font-weight: 500;
+      font-size: 0.8em;
       color: hsl(228, 12%, 48%);
-      margin: 25px 30px 30px 30px;
+      margin: 11% 10% 0% 13%;
       line-height: 150%;
     }
 
